--- a/inst/book/assets/tex/template.tex
+++ b/inst/book/assets/tex/template.tex
@@ -341,7 +341,7 @@ Agradecer a todo mundo.
 % definimos o novo tipo de float "program" (em utils.tex)
 % Você pode escolher se quer ou não permitir a quebra de página
 %\listof{program}{\programlistname}
-\disablenewpage{\listof{program}{\programlistname}}
+% \disablenewpage{\listof{program}{\programlistname}}
 
 % Sumário (obrigatório)
 \tableofcontents
@@ -352,20 +352,20 @@ Agradecer a todo mundo.
 % pois o índice é opcional). É comum colocar esses itens no final do documento,
 % junto com o comando \printindex, mas em alguns casos isso torna necessário
 % executar texindy (ou makeindex) mais de uma vez, então colocar aqui é melhor.
-\index{Inglês|see{Língua estrangeira}}
-\index{Figuras|see{Floats}}
-\index{Tabelas|see{Floats}}
-\index{Código-fonte|see{Floats}}
-\index{Subcaptions|see{Subfiguras}}
-\index{Sublegendas|see{Subfiguras}}
-\index{Equações|see{Modo matemático}}
-\index{Fórmulas|see{Modo matemático}}
-\index{Rodapé, notas|see{Notas de rodapé}}
-\index{Captions|see{Legendas}}
-\index{Versão original|see{Tese/Dissertação, versões}}
-\index{Versão corrigida|see{Tese/Dissertação, versões}}
-\index{Palavras estrangeiras|see{Língua estrangeira}}
-\index{Floats!Algoritmo|see{Floats, ordem}}
+% \index{Inglês|see{Língua estrangeira}}
+% \index{Figuras|see{Floats}}
+% \index{Tabelas|see{Floats}}
+% \index{Código-fonte|see{Floats}}
+% \index{Subcaptions|see{Subfiguras}}
+% \index{Sublegendas|see{Subfiguras}}
+% \index{Equações|see{Modo matemático}}
+% \index{Fórmulas|see{Modo matemático}}
+% \index{Rodapé, notas|see{Notas de rodapé}}
+% \index{Captions|see{Legendas}}
+% \index{Versão original|see{Tese/Dissertação, versões}}
+% \index{Versão corrigida|see{Tese/Dissertação, versões}}
+% \index{Palavras estrangeiras|see{Língua estrangeira}}
+% \index{Floats!Algoritmo|see{Floats, ordem}}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% CAPÍTULOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -466,6 +466,6 @@ $body$
   heading=bibintoc, % Inclui a bibliografia no sumário
 ]
 
-\printindex % imprime o índice remissivo no documento (opcional)
+% \printindex % imprime o índice remissivo no documento (opcional)
 
 \end{document}
