atualização da bibliografia

--- a/inst/book/assets/bib/captcha.bib
+++ b/inst/book/assets/bib/captcha.bib
@@ -513,6 +513,17 @@
   file = {C\:\\Users\\julio\\Zotero\\storage\\PYHZVG6P\\Murray-Rust - 2008 - Open data in science.pdf;C\:\\Users\\julio\\Zotero\\storage\\MYNAVGF2\\npre.2008.1526.html}
 }
 
+@inproceedings{murrayAVALargescaleDatabase2012,
+  title = {{{AVA}}: {{A}} Large-Scale Database for Aesthetic Visual Analysis},
+  shorttitle = {{{AVA}}},
+  booktitle = {2012 {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+  author = {Murray, Naila and Marchesotti, Luca and Perronnin, Florent},
+  year = {2012},
+  pages = {2408--2415},
+  publisher = {{IEEE}},
+  file = {C\:\\Users\\julio\\Zotero\\storage\\5R27QDWY\\Murray et al. - 2012 - AVA A large-scale database for aesthetic visual a.pdf;C\:\\Users\\julio\\Zotero\\storage\\VDNPB5DJ\\6247954.html}
+}
+
 @inproceedings{naDeepGenerativePositiveUnlabeled2020,
   title = {Deep {{Generative Positive-Unlabeled Learning}} under {{Selection Bias}}},
   booktitle = {Proceedings of the 29th {{ACM International Conference}} on {{Information}} \& {{Knowledge Management}}},
@@ -583,6 +594,17 @@
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computer Vision and Pattern Recognition},
   file = {C\:\\Users\\julio\\Zotero\\storage\\V7KCX6CY\\Ramesh et al. - 2022 - Hierarchical Text-Conditional Image Generation wit.pdf;C\:\\Users\\julio\\Zotero\\storage\\889MFBYT\\2204.html}
+}
+
+@article{rameshHierarchicalTextconditionalImage2022,
+  title = {Hierarchical Text-Conditional Image Generation with Clip Latents},
+  author = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+  year = {2022},
+  journal = {arXiv preprint arXiv:2204.06125},
+  eprint = {2204.06125},
+  eprinttype = {arxiv},
+  archiveprefix = {arXiv},
+  file = {C\:\\Users\\julio\\Zotero\\storage\\UJ3M98E4\\2204.html}
 }
 
 @patent{reshefMethodSystemDiscriminating2005,
