--- a/inst/book/references.bib
+++ b/inst/book/references.bib
@@ -668,3 +668,18 @@
 	date = {2022},
 	url = {https://CRAN.R-project.org/package=piggyback}
 }
+
+@article{ramesh,
+	title = {Hierarchical Text-Conditional Image Generation with CLIP Latents},
+	author = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+	doi = {10.48550/arXiv.2204.06125}
+}
+
+@inproceedings{murray2012,
+	title = {AVA: A large-scale database for aesthetic visual analysis},
+	author = {Murray, Naila and Marchesotti, Luca and Perronnin, Florent},
+	year = {2012},
+	date = {2012},
+	publisher = {IEEE},
+	pages = {2408{\textendash}2415}
+}
