--- a/inst/book/conclusoes.qmd
+++ b/inst/book/conclusoes.qmd
@@ -1,8 +1,35 @@
 # Conclusões {#conclusao}
 
-> Concluir sobre a parte mais política (captchas e dados abertos etc)
+\epigrafe{Even robots need a break from the daily grind of solving captchas.}{ChatGPT}
 
-> Concluir sobre o avanço científico na modelagem estatística
+::: {.content-visible when-format="html"}
 
-> Reforçar a contribuição técnica para a comunidade com o pacote e o app
+> Even robots need a break from the daily grind of solving captchas.
+> 
+> -- ChatGPT
 
+:::
+
+Este trabalho de doutorado teve como objeto de estudo os Captchas, que são desafios utilizados para identificar se o acesso à uma página na internet é realizada por uma pessoa ou uma máquina. A pesquisa apresentou um breve histórico dos Captchas, os problemas de sua utilização em serviços públicos e as abordagens existentes para resolução automática de Captchas. Em seguida, apresentou-se como uma nova abordagem, o WAWL, poderia aliar técnicas de raspagem de dados e aprendizado estatístico com rótulos parciais para obter modelos poderosos de resolução de Captchas sem a necessidade de anotar vários casos manualmente. Por fim, foram apresentadas as propriedades do modelo proposto e os resultados empíricos através de uma série de simulações.
+
+Os resultados da pesquisa foram positivos. Na parte teórica, várias pesquisas já apontavam que o aprendizado com rótulos parciais ou rótulos complementares possuiam boas propriedades. O resultado foi verificado a estudando-se as propriedades da função de perda proposta. Na parte prática, o trabalho mostrou que a técnica apresenta bons resultados, aumentando a acurácia dos modelos iniciais em mais de 3 vezes, sem a necessidade de anotar novos dados. Além disso, foram encontradas evidências de que o método pode ser aplicado iterativamente, resultado em modelos com poder preditivo ainda maior.
+
+As contribuições do estudo podem ser organizadas em três tipos: contribuições para a sociedade em geral, contribuições para a pesquisa acadêmica e contribuições para a comunidade de programação. Os próximos parágrafos descrevem esses avanços.
+
+A contribuição para a sociedade em geral está na quebra de um mecanismo de incentivo nefasto, gerado pela utilização de Captchas em sites serviços públicos. Como comentado na introdução, o uso de Captchas gera um incentivo para que pessoas e empresas que fazem raspagem de dados utilizem serviços que se aproveitam de mão de obra humana com baixíssima remuneração. Ao disponibilizar os modelos para resolução de Captchas publicamente e uma ferramenta que facilita seu uso, as pessoas e empresas interessadas podem resolver Captchas gratuitamente, afastando a necessidade de utilizar esses serviços. Dessa forma, espera-se que o trabalho possa ter um impacto positivo, ainda que pequeno, na qualidade das relações de trabalho na sociedade.
+
+A contribuição para a pesquisa acadêmica pode ser separada em duas partes. A primeira é que a função de perda proposta apresenta boas propriedades matemáticas, mostrando que pode ser um bom ponto de partida para quem deseja trabalhar com aprendizado com rótulos parcialmente anotados. A segunda é relacionada ao uso da raspagem de dados como passo intermediário na construção de modelos estatísticos, que pode ser a base para o desenvolvimento de um novo campo de pesquisa. Espera-se que os resultados obtidos sirvam como incentivo para que as técnicas de raspagem de dados sejam ensinadas como disciplinas optativas em cursos de estatística e similares.
+
+A contribuição para a comunidade de programadoras e programadores está no pacote `{captcha}`. O pacote é uma caixa de ferramentas completa para quem tiver interesse em resolver Captchas, além de ser uma das primeiras aplicações que utilizam os pacotes `{torch}` e `{luz}` como motor computacional. O pacote possui uma interface que permite o compartilhamento de códigos, bases de dados e modelos de forma distribuída, possibilitando a criação de soluções que vão muito além do próprio pacote.
+
+Com isso, pode-se concluir que os quatro objetivos descritos na @sec-objetivos foram atendidos. O modelo proposto foi descrito e suas propriedades estudadas. Um repositório de dados completo foi construído e disponibilizado no repositório do pacote [`{captcha}`](https://github.com/decryptr/captcha/releases), contendo dados e modelos ajustados. O método foi utilizado e testado para diferentes Captchas e diferentes situações, com sucesso. Finalmente, foi disponibilizado um pacote computacional aberto, possibilitando a resolução de novos Captchas que aparecerem em serviços públicos.
+
+É evidente, no entanto, que o trabalho apresenta algumas limitações. Na parte teórica, os resultados matemáticos podem ser desenvolvidos com maior detalhamento. Especificamente, outras propostas de função de perda podem ser apresentadas, bem como os testes empíricos com essas funções de perda. A escolha de apenas uma alternativa foi feita por conta do foco em resolver o problema de pesquisa (os Captchas) em detrimento da discussão detalhada do aprendizado com rótulos parciais, bem como da necessidade de fazer muito mais simulações se outras funções de perda fossem propostas.
+
+Outra limitação importante do estudo está na aplicação iterada. A pesquisa apresentou essa parte como um resultado adicional, mas os limites da aplicação iterada ainda não foram estudados de forma completa. Essa limitação pode ser entendida também como um próximo passo, que seria uma solução de *online learning*
+
+Uma extensão possível desta pesquisa é a criação de um modelo que aprende diretamente da *web*, sem a separação de passos descrita pelo WAWL. A técnica consiste em inserir as funções de acesso e teste do Captcha como método de obtenção de amostras do *dataset* do Captcha (mais detalhes na @sec-captcha-do-zero). Dessa forma, o modelo poderia obter novos dados em cada *minibatch*, indefinidamente. A vanagem dessa abordagem é que ela seria menos burocrática que o WAWL, que precisa de uma pessoa para escrever as aplicações iteradas. A desvantagem é que o ajuste do modelo dependeria de uma conexão com a internet e seria mais suscetível a problemas de conexão, que precisariam ser tratados com cuidado.
+
+Outra extensão oportuna seria a criação de um modelo geral de resolução de Captchas, desenvolvido a partir das bases que foram construídas durante a pesquisa. Esse modelo poderia ser utilizado como modelo inicial para a resolução de novos Captchas e aprimorado com o oráculo, podendo até afastar completamente a necessidade de anotação manual. No momento, não é possível saber que esse modelo realmente funcionaria na prática, já que i) nada garante que ele tenha uma acurácia maior que 10% para um novo Captcha, mesmo se construído com base em Captchas de várias origens e ii) foram encontradas evidências de que os modelos com acurácia menor de 10% têm mais dificuldades em melhorar com o método WAWL.
+
+A presente tese foi fruto de um longo processo de investigação e desenvolvimento, investigando os aspectos relevantes dos Captchas de textos em imagens. Espera-se que a metodologia proposta, os resultados obtidos e os pacotes computacionais desenvolvidos sejam úteis na luta pela abertura dos dados públicos, especialmente no judiciário. O uso de Captchas em sites de serviços públicos deve acabar.
